--- a/index.html
+++ b/index.html
@@ -213,6 +213,12 @@ body.fireplace {
   <div class="game-info"><h2>Awesome Tanks 2</h2><p>Tanks • Shooter • Upgrades</p></div>
   <span class="star">★</span>
 </a>
+  
+<a class="game-card" href="https://codingiscool464.github.io/bitlife/" target="_blank">
+  <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/main/IMG_1211.jpeg');"></div>
+  <div class="game-info"><h2>Basketball Stars</h2><p>Sports • Simple • Fast</p></div>
+  <span class="star">★</span>
+</a>
 
 <a class="game-card" href="https://codingiscool464.github.io/bitlife/" target="_blank">
   <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/main/IMG_1211.jpeg');"></div>
@@ -313,6 +319,12 @@ body.fireplace {
 <a class="game-card" href="https://codingiscool464.github.io/OvO/" target="_blank">
   <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/main/IMG_1226.png');"></div>
   <div class="game-info"><h2>OvO</h2><p>Parkour • Momentum</p></div>
+  <span class="star">★</span>
+</a>
+  
+<a class="game-card" href="https://codingiscool464.github.io/ParkingFury/" target="_blank">
+  <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/main/IMG_0006.png');"></div>
+  <div class="game-info"><h2>Parking Fury</h2><p>Parking • Car • Accuracy</p></div>
   <span class="star">★</span>
 </a>
 
