--- a/index.html
+++ b/index.html
@@ -196,6 +196,12 @@ body.fireplace {
 <div id="game-list">
 
 <!-- ALL GAME CARDS -->
+<a class="game-card" href="https://codingiscool464.github.io/2048/" target="_blank">
+  <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/main/IMG_0010.png');"></div>
+  <div class="game-info"><h2>2048</h2><p>Tiles • Numbers • Arrows</p></div>
+  <span class="star">★</span>
+</a>
+
 <a class="game-card" href="https://codingiscool464.github.io/a-small-world-cup/" target="_blank">
   <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/main/IMG_1209.png');"></div>
   <div class="game-info"><h2>A Small World Cup</h2><p>Physics • Soccer • Funny</p></div>
