--- a/index.html
+++ b/index.html
@@ -220,8 +220,8 @@ body.fireplace {
   <span class="star">★</span>
 </a>
   
-<a class="game-card" href="https://codingiscool464.github.io/bitlife/" target="_blank">
-  <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/main/IMG_0005.jpeg');"></div>
+<a class="game-card" href="https://codingiscool464.github.io/BasketballStars/" target="_blank">
+  <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/main/IMG_0005.png');"></div>
   <div class="game-info"><h2>Basketball Stars</h2><p>Sports • Simple • Fast</p></div>
   <span class="star">★</span>
 </a>
