--- a/index.html
+++ b/index.html
@@ -535,9 +535,54 @@ function stopRareEvent() {
   document.querySelectorAll(".partyEmoji").forEach(el => el.remove());
 }
 
-// --- Random Event Selector (rare event only at top of hour) ---
+// --- Random Event Selector (rare event only at top of hour, persisted) ---
 let currentEvent = null;
 let rareTriggered = false; // track if rare event happened this hour
+let rareStopTimeout = null;
+
+function runEvent(name) {
+  // Stop all others first
+  stopSnow(); stopChristmas(); stopFireplace(); stopRareEvent();
+
+  if (name === "rare") {
+    startRareEvent();
+  } else if (name === "snow") {
+    startSnow();
+  } else if (name === "christmas") {
+    startChristmas();
+  } else if (name === "fireplace") {
+    startFireplace();
+  }
+}
+
+function scheduleOrStopRareByTimestamp(now) {
+  const startMs = Number(localStorage.getItem("rareStartTime")); // epoch ms
+  if (!startMs) return;
+
+  const elapsed = now.getTime() - startMs;
+  const durationMs = 5 * 60 * 1000;
+
+  if (elapsed >= durationMs) {
+    // Rare already expired
+    stopRareEvent();
+    rareTriggered = true; // still blocks normal events this hour
+    currentEvent = null;
+    localStorage.removeItem("currentEvent");
+    localStorage.removeItem("rareStartTime");
+    if (rareStopTimeout) { clearTimeout(rareStopTimeout); rareStopTimeout = null; }
+  } else {
+    // Continue rare for remaining time
+    const remaining = durationMs - elapsed;
+    if (rareStopTimeout) { clearTimeout(rareStopTimeout); }
+    rareStopTimeout = setTimeout(() => {
+      stopRareEvent();
+      currentEvent = null;
+      localStorage.removeItem("currentEvent");
+      localStorage.removeItem("rareStartTime");
+      rareStopTimeout = null;
+    }, remaining);
+  }
+}
 
 function checkTime() {
   const now = new Date();
@@ -546,77 +591,81 @@ function checkTime() {
   // Restore persisted event if available
   if (!currentEvent) {
     currentEvent = localStorage.getItem("currentEvent");
-    if (currentEvent === "rare") rareTriggered = true;
+    if (currentEvent === "rare") {
+      rareTriggered = true;
+    }
   }
 
-  // Reset rareTriggered at the start of each hour
+  // Reset at exact top of hour
   if (minutes === 0) {
+    // Clear any previous state for new hour
     rareTriggered = false;
     currentEvent = null;
     localStorage.removeItem("currentEvent");
+    localStorage.removeItem("rareStartTime");
+    if (rareStopTimeout) { clearTimeout(rareStopTimeout); rareStopTimeout = null; }
 
-    // 🎲 Only roll once at minute 0
+    // Roll rare only at minute 0
     if (Math.random() < 0.01) {
       currentEvent = "rare";
       rareTriggered = true;
-      startRareEvent(); 
-      stopSnow(); stopChristmas(); stopFireplace();
-
-      // Persist rare event
       localStorage.setItem("currentEvent", currentEvent);
+      localStorage.setItem("rareStartTime", String(now.getTime()));
+      runEvent("rare");
 
-      // Force stop after 5 minutes
-      setTimeout(() => {
+      // Schedule stop in 5 minutes
+      rareStopTimeout = setTimeout(() => {
         stopRareEvent();
         currentEvent = null;
         localStorage.removeItem("currentEvent");
+        localStorage.removeItem("rareStartTime");
+        rareStopTimeout = null;
       }, 5 * 60 * 1000);
     } else {
-      // fallback: pick one normal event randomly
+      // Pick one normal event randomly
       const events = ["snow", "christmas", "fireplace"];
       currentEvent = events[Math.floor(Math.random() * events.length)];
       localStorage.setItem("currentEvent", currentEvent);
-
-      if (currentEvent === "snow") {
-        startSnow(); stopChristmas(); stopFireplace(); stopRareEvent();
-      } else if (currentEvent === "christmas") {
-        startChristmas(); stopSnow(); stopFireplace(); stopRareEvent();
-      } else if (currentEvent === "fireplace") {
-        startFireplace(); stopSnow(); stopChristmas(); stopRareEvent();
-      }
+      runEvent(currentEvent);
     }
-  } else if (minutes > 0 && minutes < 15) {
-    // Normal events only if rare event did NOT trigger
-    if (!rareTriggered && !currentEvent) {
-      const events = ["snow", "christmas", "fireplace"];
-      currentEvent = events[Math.floor(Math.random() * events.length)];
-      localStorage.setItem("currentEvent", currentEvent);
+    return; // minute 0 handled
+  }
 
-      if (currentEvent === "snow") {
-        startSnow(); stopChristmas(); stopFireplace(); stopRareEvent();
-      } else if (currentEvent === "christmas") {
-        startChristmas(); stopSnow(); stopFireplace(); stopRareEvent();
-      } else if (currentEvent === "fireplace") {
-        startFireplace(); stopSnow(); stopChristmas(); stopRareEvent();
+  // Minutes 1–14
+  if (minutes > 0 && minutes < 15) {
+    // If rare was previously triggered, continue or stop based on timestamp
+    if (currentEvent === "rare") {
+      runEvent("rare");          // ensure it’s running after reload
+      scheduleOrStopRareByTimestamp(now); // adjust remaining time
+      return;
+    }
+
+    // Normal events only if rare did NOT trigger
+    if (!rareTriggered) {
+      if (!currentEvent) {
+        const events = ["snow", "christmas", "fireplace"];
+        currentEvent = events[Math.floor(Math.random() * events.length)];
+        localStorage.setItem("currentEvent", currentEvent);
       }
-    } else if (rareTriggered) {
-      // Rare event already happened → block normal events until next hour
-      stopSnow();
-      stopChristmas();
-      stopFireplace();
-      stopRareEvent();
+      runEvent(currentEvent); // ensure event starts after reload
+    } else {
+      // Rare happened earlier → block normal events until next hour
+      stopSnow(); stopChristmas(); stopFireplace(); stopRareEvent();
       currentEvent = null;
       localStorage.removeItem("currentEvent");
     }
-  } else {
-    // End of window: stop all events and reset
-    stopSnow();
-    stopChristmas();
-    stopFireplace();
-    stopRareEvent();
-    currentEvent = null;
-    localStorage.removeItem("currentEvent");
+    return;
   }
+
+  // Minute >= 15: end of window
+  stopSnow();
+  stopChristmas();
+  stopFireplace();
+  stopRareEvent();
+  currentEvent = null;
+  localStorage.removeItem("currentEvent");
+  localStorage.removeItem("rareStartTime");
+  if (rareStopTimeout) { clearTimeout(rareStopTimeout); rareStopTimeout = null; }
 }
 
 // Run every minute and on load
