--- a/index.html
+++ b/index.html
@@ -279,7 +279,13 @@ body.fireplace {
   <div class="game-info"><h2>FNAF 4</h2><p>Horror • Nightmare</p></div>
   <span class="star">★</span>
 </a>
-  
+
+<a class="game-card" href="https://codingiscool464.github.io/GeometryDash/" target="_blank">
+  <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/update-v1.4/IMG_0017.png');"></div>
+  <div class="game-info"><h2>Geometry Dash Classic</h2><p>Shapes • One-Button</p></div>
+  <span class="star">★</span>
+</a>
+
 <a class="game-card" href="https://codingiscool464.github.io/leveldevil/" target="_blank">
   <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/refs/heads/main/level%20devil.png');"></div>
   <div class="game-info"><h2>Level Devil</h2><p>Parkour • 2D</p></div>
