--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@ body.fireplace {
 
 <a class="game-card" href="https://codingiscool464.github.io/GeometryDash/" target="_blank">
   <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/update-v1.4/IMG_0017.png');"></div>
-  <div class="game-info"><h2>Geometry Dash Classic</h2><p>Shapes • One-Button</p></div>
+  <div class="game-info"><h2>Geometry Dash</h2><p>Shapes • One-Button</p></div>
   <span class="star">★</span>
 </a>
 
