--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@ body.fireplace {
 </a>
 
 <a class="game-card" href="https://codingiscool464.github.io/GeometryDash/" target="_blank">
-  <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/update-v1.4/IMG_0017.png');"></div>
+  <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/main/IMG_0017.png');"></div>
   <div class="game-info"><h2>Geometry Dash</h2><p>Shapes • One-Button</p></div>
   <span class="star">★</span>
 </a>
@@ -371,7 +371,7 @@ body.fireplace {
 </a>
 
 <a class="game-card" href="https://codingiscool464.github.io/SnowRider/" target="_blank">
-  <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/refs/heads/update-v1.4/IMG_0018.jpeg');"></div>
+  <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/refs/heads/main/IMG_0018.jpeg');"></div>
   <div class="game-info"><h2>Snow Rider</h2><p>Fast • Winter • Sleigh</p></div>
   <span class="star">★</span>
 </a>
