--- a/index.html
+++ b/index.html
@@ -333,6 +333,13 @@ body.fireplace {
   <div class="game-info"><h2>OvO</h2><p>Parkour • Momentum</p></div>
   <span class="star">★</span>
 </a>
+
+<a class="game-card" href="https://codingiscool464.github.io/PapasWingeria/" target="_blank">
+  <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/refs/heads/main/IMG_0019.jpeg');"></div>
+  <div class="game-info"><h2>Papas Wingeria</h2><p>Food • Skill • Speed</p></div>
+  <span class="star">★</span>
+</a>
+
   
 <a class="game-card" href="https://codingiscool464.github.io/ParkingFury/" target="_blank">
   <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/main/IMG_0006.png');"></div>
