--- a/index.html
+++ b/index.html
@@ -359,6 +359,12 @@ body.fireplace {
   <span class="star">★</span>
 </a>
 
+<a class="game-card" href="https://codingiscool464.github.io/RooftopSnipers/" target="_blank">
+  <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/refs/heads/main/IMG_0020.jpeg');"></div>
+  <div class="game-info"><h2>Rooftop Snipers</h2><p>2-Button • Combat</p></div>
+  <span class="star">★</span>
+</a>
+
 <a class="game-card" href="https://codingiscool464.github.io/run3/game" target="_blank">
   <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/main/IMG_1216.jpeg');"></div>
   <div class="game-info"><h2>Run 3</h2><p>Runner • Void • Gravity</p></div>
