--- a/index.html
+++ b/index.html
@@ -347,6 +347,18 @@ body.fireplace {
   <span class="star">★</span>
 </a>
 
+<a class="game-card" href="https://codingiscool464.github.io/ParkingFury2/" target="_blank">
+  <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/refs/heads/main/parking%20fury%202.png');"></div>
+  <div class="game-info"><h2>Parking Fury 2</h2><p>Parking • Car • Accuracy</p></div>
+  <span class="star">★</span>
+</a>
+
+<a class="game-card" href="https://codingiscool464.github.io/ParkingFury3/" target="_blank">
+  <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/refs/heads/main/parking%20fury%203.png');"></div>
+  <div class="game-info"><h2>Parking Fury 3</h2><p>Parking • Car • Accuracy</p></div>
+  <span class="star">★</span>
+</a>
+  
 <a class="game-card" href="https://codingiscool464.github.io/polytrack/" target="_blank">
   <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/main/IMG_1210.jpeg');"></div>
   <div class="game-info"><h2>PolyTrack</h2><p>Racing • Fast • Flow</p></div>
@@ -384,6 +396,12 @@ body.fireplace {
 </a>
 
 <a class="game-card" href="https://codingiscool464.github.io/SnowRider/" target="_blank">
+  <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/refs/heads/main/IMG_0018.jpeg');"></div>
+  <div class="game-info"><h2>Snow Rider</h2><p>Fast • Winter • Sleigh</p></div>
+  <span class="star">★</span>
+</a>
+
+<a class="game-card" href="https://codingiscool464.github.io/StickmanHook/" target="_blank">
   <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/refs/heads/main/IMG_0018.jpeg');"></div>
   <div class="game-info"><h2>Snow Rider</h2><p>Fast • Winter • Sleigh</p></div>
   <span class="star">★</span>
