--- a/index.html
+++ b/index.html
@@ -219,6 +219,12 @@ body.fireplace {
   <div class="game-info"><h2>Awesome Tanks 2</h2><p>Tanks • Shooter • Upgrades</p></div>
   <span class="star">★</span>
 </a>
+
+<a class="game-card" href="https://codingiscool464.github.io/BasketAndBall/" target="_blank">
+  <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/refs/heads/main/basket%20and%20ball.png');"></div>
+  <div class="game-info"><h2>Basket And Ball</h2><p>Jumping • Sports • Ball Control</p></div>
+  <span class="star">★</span>
+</a>
   
 <a class="game-card" href="https://codingiscool464.github.io/BasketballStars/" target="_blank">
   <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/main/IMG_0005.png');"></div>
